--- a/user/html/try-on.html
+++ b/user/html/try-on.html
@@ -210,102 +210,6 @@
         }
       }
 
-      /* Fix for camera video element */
-      #camera-video {
-        width: 100%;
-        height: 100%;
-        object-fit: cover; /* Changed from default to cover */
-        border-radius: 10px;
-        display: none;
-        position: absolute; /* Add this */
-        top: 0;
-        left: 0;
-        z-index: 1;
-      }
-
-      /* Ensure the uploaded image also uses absolute positioning */
-      .camera-view img {
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-        display: none;
-        position: absolute; /* Add this */
-        top: 0;
-        left: 0;
-        z-index: 2;
-      }
-
-      /* Ensure canvas uses absolute positioning */
-      #lipstick-canvas {
-        position: absolute; /* Add this */
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 3;
-      }
-
-      /* Update camera-view to have relative positioning */
-      .camera-view {
-        width: 100%;
-        height: 500px;
-        background: linear-gradient(135deg, var(--light-pink), #ffe6f2);
-        border-radius: 10px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        overflow: hidden;
-        position: relative; /* Ensure this is relative */
-      }
-
-      /* MOBILE - Adjust camera video */
-      @media (max-width: 768px) {
-        .camera-view {
-          height: 55vh;
-          min-height: 450px;
-        }
-
-        #camera-video {
-          object-fit: contain; /* Use contain on mobile for better visibility */
-        }
-      }
-
-      /* Make it slightly taller on smaller screens */
-      @media (max-width: 480px) {
-        .camera-view {
-          height: 60vh;
-          min-height: 500px;
-        }
-
-        #camera-video {
-          object-fit: contain;
-        }
-      }
-
-      /* Maximum height for very small screens */
-      @media (max-width: 375px) {
-        .camera-view {
-          height: 65vh;
-          min-height: 550px;
-        }
-
-        #camera-video {
-          object-fit: contain;
-        }
-      }
-
-      /* Ultra small screens */
-      @media (max-width: 320px) {
-        .camera-view {
-          height: 68vh;
-          min-height: 600px;
-        }
-
-        #camera-video {
-          object-fit: contain;
-        }
-      }
-
       .camera-view img {
         width: 100%;
         height: 100%;
@@ -2604,16 +2508,6 @@
           // Hide placeholder and show camera interface
           placeholder.style.display = "none";
 
-          // Hide uploaded image if visible
-          if (uploadedImage.style.display !== "none") {
-            uploadedImage.style.display = "none";
-          }
-
-          // Hide canvas if visible
-          if (canvas.style.display !== "none") {
-            canvas.style.display = "none";
-          }
-
           // Create video element for camera if it doesn't exist
           let video = document.getElementById("camera-video");
           if (!video) {
@@ -2621,46 +2515,32 @@
             video.id = "camera-video";
             video.autoplay = true;
             video.playsinline = true;
-            video.setAttribute("webkit-playsinline", "true"); // iOS
-            video.setAttribute("x5-playsinline", "true"); // Android
-            video.style.width = "100%";
-            video.style.height = "100%";
-            video.style.objectFit = "cover";
-            video.style.position = "absolute";
-            video.style.top = "0";
-            video.style.left = "0";
-            video.style.borderRadius = "10px";
-            video.style.zIndex = "1";
-
-            // Add to camera-view at the beginning
-            document.querySelector(".camera-view").prepend(video);
-          } else {
-            video.style.display = "block";
+            document.querySelector(".camera-view").appendChild(video);
           }
 
-          // Create camera controls
+          // Create capture button if it doesn't exist
           let captureBtn = document.getElementById("capture-btn");
-          let cancelBtn = document.getElementById("cancel-camera");
-
           if (!captureBtn) {
             captureBtn = document.createElement("button");
             captureBtn.id = "capture-btn";
             captureBtn.className = "camera-btn primary";
             captureBtn.innerHTML = '<i class="fas fa-camera"></i> Take Photo';
             captureBtn.style.marginTop = "10px";
-            captureBtn.style.zIndex = "10";
             document.querySelector(".camera-controls").appendChild(captureBtn);
+
             captureBtn.addEventListener("click", capturePhoto);
           }
 
+          // Create cancel button if it doesn't exist
+          let cancelBtn = document.getElementById("cancel-camera");
           if (!cancelBtn) {
             cancelBtn = document.createElement("button");
             cancelBtn.id = "cancel-camera";
             cancelBtn.className = "camera-btn";
             cancelBtn.innerHTML = '<i class="fas fa-times"></i> Cancel';
             cancelBtn.style.marginTop = "10px";
-            cancelBtn.style.zIndex = "10";
             document.querySelector(".camera-controls").appendChild(cancelBtn);
+
             cancelBtn.addEventListener("click", stopCamera);
           }
 
@@ -2674,7 +2554,7 @@
           navigator.mediaDevices
             .getUserMedia({
               video: {
-                facingMode: "user",
+                facingMode: "user", // Use front camera
                 width: { ideal: 1280 },
                 height: { ideal: 720 },
               },
@@ -2686,33 +2566,11 @@
               video.style.display = "block";
               isCameraActive = true;
 
-              // Handle mobile orientation
-              const handleOrientation = () => {
-                const isMobile = window.innerWidth <= 768;
-                if (isMobile) {
-                  // On mobile, use contain for better visibility
-                  video.style.objectFit = "contain";
-                  video.style.backgroundColor = "#000"; // Add black background for letterboxing
-                } else {
-                  video.style.objectFit = "cover";
-                  video.style.backgroundColor = "transparent";
-                }
+              // Set canvas size to match video
+              video.onloadedmetadata = function () {
+                canvas.width = video.videoWidth;
+                canvas.height = video.videoHeight;
               };
-
-              // Initial call
-              handleOrientation();
-
-              // Listen for orientation changes
-              window.addEventListener("resize", handleOrientation);
-              window.addEventListener("orientationchange", handleOrientation);
-
-              // Store handler for cleanup
-              video._orientationHandler = handleOrientation;
-
-              // Set canvas size to match container, not video
-              const container = document.querySelector(".camera-view");
-              canvas.width = container.clientWidth;
-              canvas.height = container.clientHeight;
             })
             .catch(function (err) {
               console.error("Camera error: ", err);
@@ -2724,168 +2582,103 @@
         }
 
         function capturePhoto() {
-  if (!isCameraActive) return;
+          if (!isCameraActive) return;
 
-  const video = document.getElementById("camera-video");
-  const captureCanvas = document.createElement("canvas");
-  const captureCtx = captureCanvas.getContext("2d");
+          const video = document.getElementById("camera-video");
+          const captureCanvas = document.createElement("canvas");
+          const captureCtx = captureCanvas.getContext("2d");
 
-  captureCanvas.width = video.videoWidth;
-  captureCanvas.height = video.videoHeight;
-  captureCtx.drawImage(
-    video,
-    0,
-    0,
-    captureCanvas.width,
-    captureCanvas.height
-  );
+          captureCanvas.width = video.videoWidth;
+          captureCanvas.height = video.videoHeight;
+          captureCtx.drawImage(
+            video,
+            0,
+            0,
+            captureCanvas.width,
+            captureCanvas.height
+          );
 
-  const imageData = captureCanvas.toDataURL("image/png");
-  stopCamera();
+          const imageData = captureCanvas.toDataURL("image/png");
+          stopCamera();
 
-  // FIRST: Show the uploaded image area and hide other elements
-  placeholder.style.display = "none";
-  
-  // Remove the transform scale from mobile CSS temporarily
-  const originalTransform = uploadedImage.style.transform;
-  uploadedImage.style.transform = "none"; // Reset transform for calculation
-  
-  // Make sure the image is visible
-  uploadedImage.style.display = "block";
-  uploadedImage.style.position = "absolute";
-  uploadedImage.style.top = "0";
-  uploadedImage.style.left = "0";
-  uploadedImage.style.width = "100%";
-  uploadedImage.style.height = "100%";
-  uploadedImage.style.objectFit = "contain";
-  uploadedImage.style.zIndex = "2";
+          uploadedImage.onload = function () {
+            const container = uploadedImage.parentElement;
+            const containerWidth = container.clientWidth;
+            const containerHeight = container.clientHeight;
 
-  // Create a new Image object to load and process
-  const tempImage = new Image();
-  tempImage.onload = function() {
-    // Calculate proper display dimensions
-    const container = uploadedImage.parentElement;
-    const containerWidth = container.clientWidth;
-    const containerHeight = container.clientHeight;
+            const imgAspectRatio =
+              uploadedImage.naturalWidth / uploadedImage.naturalHeight;
+            const containerAspectRatio = containerWidth / containerHeight;
 
-    const imgAspectRatio = tempImage.naturalWidth / tempImage.naturalHeight;
-    const containerAspectRatio = containerWidth / containerHeight;
+            let displayedWidth, displayedHeight, offsetX, offsetY;
 
-    let displayedWidth, displayedHeight, offsetX, offsetY;
+            if (imgAspectRatio > containerAspectRatio) {
+              displayedWidth = containerWidth;
+              displayedHeight = containerWidth / imgAspectRatio;
+              offsetX = 0;
+              offsetY = (containerHeight - displayedHeight) / 2;
+            } else {
+              displayedHeight = containerHeight;
+              displayedWidth = containerHeight * imgAspectRatio;
+              offsetX = (containerWidth - displayedWidth) / 2;
+              offsetY = 0;
+            }
 
-    if (imgAspectRatio > containerAspectRatio) {
-      // Image is wider than container
-      displayedWidth = containerWidth;
-      displayedHeight = containerWidth / imgAspectRatio;
-      offsetX = 0;
-      offsetY = (containerHeight - displayedHeight) / 2;
-    } else {
-      // Image is taller than container
-      displayedHeight = containerHeight;
-      displayedWidth = containerHeight * imgAspectRatio;
-      offsetX = (containerWidth - displayedWidth) / 2;
-      offsetY = 0;
-    }
+            canvas.width = containerWidth;
+            canvas.height = containerHeight;
 
-    // Set the actual uploaded image src
-    uploadedImage.src = imageData;
-    
-    // Wait for uploadedImage to load
-    uploadedImage.onload = function() {
-      // Set canvas dimensions
-      canvas.width = containerWidth;
-      canvas.height = containerHeight;
-      canvas.style.display = "block";
-      canvas.style.position = "absolute";
-      canvas.style.top = "0";
-      canvas.style.left = "0";
-      canvas.style.width = "100%";
-      canvas.style.height = "100%";
-      canvas.style.zIndex = "3";
+            canvas._displayInfo = {
+              displayedWidth,
+              displayedHeight,
+              offsetX,
+              offsetY,
+              imgAspectRatio,
+              containerWidth,
+              containerHeight,
+            };
 
-      // Store display info on canvas
-      canvas._displayInfo = {
-        displayedWidth,
-        displayedHeight,
-        offsetX,
-        offsetY,
-        imgAspectRatio,
-        containerWidth,
-        containerHeight,
-        naturalWidth: tempImage.naturalWidth,
-        naturalHeight: tempImage.naturalHeight
-      };
+            uploadedImage.style.display = "none";
+            placeholder.style.display = "none";
 
-      console.log("📸 Photo captured and displayed:", {
-        containerSize: `${containerWidth}x${containerHeight}`,
-        imageSize: `${tempImage.naturalWidth}x${tempImage.naturalHeight}`,
-        displaySize: `${displayedWidth}x${displayedHeight}`,
-        offset: `${offsetX},${offsetY}`
-      });
+            processImageWithFaceMesh(uploadedImage);
 
-      // Process with face mesh
-      processImageWithFaceMesh(uploadedImage);
+            hasProcessedImage = true;
+            currentImageSource = "camera";
+          };
 
-      hasProcessedImage = true;
-      currentImageSource = "camera";
-      
-      // Restore transform if needed for mobile
-      if (window.innerWidth <= 768) {
-        uploadedImage.style.transform = originalTransform;
-      }
-    };
-  };
-  
-  tempImage.onerror = function() {
-    console.error("Failed to load captured image");
-    alert("Failed to process the captured photo. Please try again.");
-    placeholder.style.display = "flex";
-    uploadedImage.style.display = "none";
-  };
-  
-  tempImage.src = imageData;
-  localStorage.setItem("lastUploadedImage", imageData);
-}
+          uploadedImage.src = imageData;
+          localStorage.setItem("lastUploadedImage", imageData);
+        }
 
-function stopCamera() {
-  if (cameraStream) {
-    cameraStream.getTracks().forEach((track) => track.stop());
-    cameraStream = null;
-  }
+        function stopCamera() {
+          if (cameraStream) {
+            cameraStream.getTracks().forEach((track) => track.stop());
+            cameraStream = null;
+          }
 
-  // Hide video element
-  const video = document.getElementById("camera-video");
-  if (video) {
-    video.style.display = "none";
-    video.srcObject = null;
+          // Hide video element
+          const video = document.getElementById("camera-video");
+          if (video) {
+            video.style.display = "none";
+            video.srcObject = null;
+          }
 
-    // Clean up orientation handlers
-    if (video._orientationHandler) {
-      window.removeEventListener("resize", video._orientationHandler);
-      window.removeEventListener(
-        "orientationchange",
-        video._orientationHandler
-      );
-      delete video._orientationHandler;
-    }
-  }
+          // Show original buttons, hide camera controls
+          uploadBtn.style.display = "flex";
+          cameraBtn.style.display = "flex";
 
-  // Show original buttons, hide camera controls
-  uploadBtn.style.display = "flex";
-  cameraBtn.style.display = "flex";
+          const captureBtn = document.getElementById("capture-btn");
+          const cancelBtn = document.getElementById("cancel-camera");
+          if (captureBtn) captureBtn.style.display = "none";
+          if (cancelBtn) cancelBtn.style.display = "none";
 
-  const captureBtn = document.getElementById("capture-btn");
-  const cancelBtn = document.getElementById("cancel-camera");
-  if (captureBtn) captureBtn.style.display = "none";
-  if (cancelBtn) cancelBtn.style.display = "none";
+          isCameraActive = false;
 
-  isCameraActive = false;
-
-  // Only show placeholder if there's no image at all
-  if (!hasProcessedImage && (!uploadedImage.src || uploadedImage.src === "")) {
-    placeholder.style.display = "flex";
-  }
-}
+          // If no image is loaded, show placeholder again
+          if (uploadedImage.style.display === "none" && !canvas._displayInfo) {
+            placeholder.style.display = "flex";
+          }
+        }
 
         // Initialize FaceMesh
         function initializeFaceMesh() {
