--- a/user/html/try-on.html
+++ b/user/html/try-on.html
@@ -2066,6 +2066,197 @@
           opacity: 1;
         }
       }
+
+      /* Privacy Modal Styles */
+      .privacy-modal {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.8);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 9999;
+        animation: fadeIn 0.3s ease;
+      }
+
+      .privacy-modal-content {
+        background: white;
+        border-radius: 15px;
+        width: 90%;
+        max-width: 500px;
+        max-height: 80vh;
+        overflow-y: auto;
+        box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
+        animation: slideUp 0.3s ease;
+      }
+
+      .privacy-modal-header {
+        background: linear-gradient(
+          135deg,
+          var(--primary-pink),
+          var(--dark-pink)
+        );
+        color: white;
+        padding: 25px;
+        border-radius: 15px 15px 0 0;
+        text-align: center;
+      }
+
+      .privacy-modal-header i {
+        font-size: 40px;
+        margin-bottom: 15px;
+      }
+
+      .privacy-modal-header h3 {
+        margin: 0;
+        font-size: 24px;
+        font-family: "Cormorant Garamond", serif;
+      }
+
+      .privacy-modal-body {
+        padding: 25px;
+      }
+
+      .privacy-point {
+        display: flex;
+        gap: 15px;
+        margin-bottom: 20px;
+        align-items: flex-start;
+      }
+
+      .privacy-point i {
+        color: var(--primary-pink);
+        font-size: 20px;
+        margin-top: 3px;
+        flex-shrink: 0;
+      }
+
+      .privacy-point strong {
+        color: #333;
+        display: block;
+        margin-bottom: 5px;
+        font-size: 15px;
+      }
+
+      .privacy-point p {
+        color: #666;
+        font-size: 14px;
+        line-height: 1.5;
+        margin: 0;
+      }
+
+      .privacy-consent {
+        margin-top: 25px;
+        padding-top: 20px;
+        border-top: 1px solid #eee;
+      }
+
+      .privacy-consent label {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        color: #666;
+        font-size: 14px;
+        cursor: pointer;
+      }
+
+      .privacy-consent input[type="checkbox"] {
+        width: 18px;
+        height: 18px;
+        accent-color: var(--primary-pink);
+      }
+
+      .privacy-info-btn {
+  background: transparent;
+  border: 1px solid var(--primary-pink);
+  color: var(--primary-pink);
+  border-radius: 20px;
+  padding: 8px 16px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  display: inline-flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.privacy-info-btn:hover {
+  background: rgba(255, 126, 185, 0.1);
+  transform: translateY(-2px);
+}
+
+/* Simplify modal footer for single button */
+.privacy-modal-footer {
+  padding: 20px 25px 25px;
+  text-align: center;
+  border-top: 1px solid #eee;
+}
+
+.privacy-btn-primary {
+  background: linear-gradient(135deg, var(--primary-pink), var(--dark-pink));
+  color: white;
+  padding: 14px 40px;
+  border-radius: 25px;
+  border: none;
+  font-size: 16px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  min-width: 200px;
+}
+
+.privacy-btn-primary:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 5px 15px rgba(255, 126, 185, 0.3);
+}
+
+/* Remove the secondary button styles since we're not using it */
+.privacy-btn-secondary {
+  display: none;
+}
+
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+        }
+        to {
+          opacity: 1;
+        }
+      }
+
+      @keyframes slideUp {
+        from {
+          opacity: 0;
+          transform: translateY(20px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+
+      /* Mobile adjustments */
+      @media (max-width: 768px) {
+        .privacy-modal-content {
+          width: 95%;
+          max-height: 85vh;
+        }
+
+        .privacy-modal-footer {
+          flex-direction: column;
+        }
+
+        .privacy-point {
+          flex-direction: column;
+          gap: 10px;
+        }
+
+        .privacy-point i {
+          align-self: center;
+        }
+      }
     </style>
   </head>
 
@@ -2154,6 +2345,11 @@
 
         <div class="photobooth-container">
           <div class="camera-section">
+            <div class="privacy-info-section">
+              <button id="privacy-info-btn" class="privacy-info-btn">
+                <i class="fas fa-shield-alt"></i> Privacy Notice
+              </button>
+            </div>
             <div class="camera-container">
               <div class="camera-view">
                 <div class="camera-placeholder">
@@ -2269,6 +2465,75 @@
           </div>
         </div>
       </section>
+
+     <!-- Privacy Notice Modal -->
+<div id="privacy-modal" class="privacy-modal" style="display: none">
+  <div class="privacy-modal-content">
+    <div class="privacy-modal-header">
+      <i class="fas fa-shield-alt"></i>
+      <h3>Your Privacy is Protected</h3>
+    </div>
+
+    <div class="privacy-modal-body">
+      <div class="privacy-point">
+        <i class="fas fa-lock"></i>
+        <div>
+          <strong>Your Photos Stay Local</strong>
+          <p>
+            All images are processed directly in your browser and never
+            uploaded to any server.
+          </p>
+        </div>
+      </div>
+
+      <div class="privacy-point">
+        <i class="fas fa-desktop"></i>
+        <div>
+          <strong>Client-Side Processing</strong>
+          <p>
+            Face detection runs entirely on your device using Google's
+            FaceMesh technology.
+          </p>
+        </div>
+      </div>
+
+      <div class="privacy-point">
+        <i class="fas fa-eraser"></i>
+        <div>
+          <strong>Easy to Clear</strong>
+          <p>
+            Your try-on history is stored only in your browser and can be
+            cleared anytime.
+          </p>
+        </div>
+      </div>
+
+      <div class="privacy-point">
+        <i class="fas fa-eye-slash"></i>
+        <div>
+          <strong>No Facial Data Collection</strong>
+          <p>
+            We don't store, share, or analyze your facial features beyond
+            the try-on session.
+          </p>
+        </div>
+      </div>
+
+      <div class="privacy-consent">
+        <label>
+          <input type="checkbox" id="privacy-dont-show-auto" />
+          Don't show automatically on page load
+        </label>
+      </div>
+    </div>
+
+    <div class="privacy-modal-footer">
+      <button id="privacy-understand" class="privacy-btn-primary">
+        I Understand
+      </button>
+    </div>
+  </div>
+</div>
     </main>
 
     <!-- Mobile Navigation -->
@@ -2302,6 +2567,37 @@
     <script>
       let currentSelectedProduct = null;
       let currentSelectedShade = null;
+
+    // Privacy Modal Functions - Always available version
+function showPrivacyNotice() {
+  const modal = document.getElementById('privacy-modal');
+  modal.style.display = 'flex';
+  
+  // Add slight blur to background for focus
+  document.querySelector('.photobooth-container').style.filter = 'blur(3px)';
+  document.querySelector('.photobooth-container').style.pointerEvents = 'none';
+}
+
+function hidePrivacyNotice() {
+  const modal = document.getElementById('privacy-modal');
+  modal.style.display = 'none';
+  
+  // Remove blur
+  document.querySelector('.photobooth-container').style.filter = 'none';
+  document.querySelector('.photobooth-container').style.pointerEvents = 'auto';
+}
+
+function acceptPrivacy() {
+  const dontShowAuto = document.getElementById('privacy-dont-show-auto').checked;
+  
+  localStorage.setItem('privacyAccepted', 'true');
+  if (dontShowAuto) {
+    localStorage.setItem('privacyDontShowAuto', 'true');
+  }
+  
+  hidePrivacyNotice();
+}
+
 
       document.addEventListener("DOMContentLoaded", async function () {
         // Add page protection FIRST
@@ -2342,6 +2638,38 @@
         cartNavs.forEach((nav) => {
           nav.addEventListener("mouseenter", showCartTotalOnHover);
         });
+
+        const privacyBtn = document.getElementById('privacy-info-btn');
+  if (privacyBtn) {
+    privacyBtn.addEventListener('click', showPrivacyNotice);
+  }
+  
+  // Add event listener for the understand button
+  const understandBtn = document.getElementById('privacy-understand');
+  if (understandBtn) {
+    understandBtn.addEventListener('click', acceptPrivacy);
+  }
+  
+  // Close modal when clicking outside
+  const privacyModal = document.getElementById('privacy-modal');
+  if (privacyModal) {
+    privacyModal.addEventListener('click', function(e) {
+      if (e.target === this) {
+        acceptPrivacy(); // Accept privacy if they click outside
+      }
+    });
+  }
+  
+  // Optional: Show automatically on first visit (if you want)
+  const privacyAccepted = localStorage.getItem("privacyAccepted");
+  const dontShowAuto = localStorage.getItem("privacyDontShowAuto");
+  
+  if (privacyAccepted !== "true" && dontShowAuto !== "true") {
+    // Show after a short delay on first visit
+    setTimeout(() => {
+      showPrivacyNotice();
+    }, 1000);
+  }
 
         // Restore last uploaded image if exists
         const lastUploadedImage = localStorage.getItem("lastUploadedImage");
