--- a/user/html/try-on.html
+++ b/user/html/try-on.html
@@ -2170,52 +2170,56 @@
       }
 
       .privacy-info-btn {
-  background: transparent;
-  border: 1px solid var(--primary-pink);
-  color: var(--primary-pink);
-  border-radius: 20px;
-  padding: 8px 16px;
-  font-size: 14px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  display: inline-flex;
-  align-items: center;
-  gap: 8px;
-}
+        background: transparent;
+        border: 1px solid var(--primary-pink);
+        color: var(--primary-pink);
+        border-radius: 20px;
+        padding: 8px 16px;
+        font-size: 14px;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        display: inline-flex;
+        align-items: center;
+        gap: 8px;
+      }
 
-.privacy-info-btn:hover {
-  background: rgba(255, 126, 185, 0.1);
-  transform: translateY(-2px);
-}
+      .privacy-info-btn:hover {
+        background: rgba(255, 126, 185, 0.1);
+        transform: translateY(-2px);
+      }
 
-/* Simplify modal footer for single button */
-.privacy-modal-footer {
-  padding: 20px 25px 25px;
-  text-align: center;
-  border-top: 1px solid #eee;
-}
+      /* Simplify modal footer for single button */
+      .privacy-modal-footer {
+        padding: 20px 25px 25px;
+        text-align: center;
+        border-top: 1px solid #eee;
+      }
 
-.privacy-btn-primary {
-  background: linear-gradient(135deg, var(--primary-pink), var(--dark-pink));
-  color: white;
-  padding: 14px 40px;
-  border-radius: 25px;
-  border: none;
-  font-size: 16px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  min-width: 200px;
-}
+      .privacy-btn-primary {
+        background: linear-gradient(
+          135deg,
+          var(--primary-pink),
+          var(--dark-pink)
+        );
+        color: white;
+        padding: 14px 40px;
+        border-radius: 25px;
+        border: none;
+        font-size: 16px;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        min-width: 200px;
+      }
 
-.privacy-btn-primary:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 5px 15px rgba(255, 126, 185, 0.3);
-}
+      .privacy-btn-primary:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 5px 15px rgba(255, 126, 185, 0.3);
+      }
 
-/* Remove the secondary button styles since we're not using it */
-.privacy-btn-secondary {
-  display: none;
-}
+      /* Remove the secondary button styles since we're not using it */
+      .privacy-btn-secondary {
+        display: none;
+      }
 
       @keyframes fadeIn {
         from {
@@ -2256,6 +2260,26 @@
         .privacy-point i {
           align-self: center;
         }
+      }
+
+      .privacy-modal-content {
+        background: white;
+        border-radius: 15px;
+        width: 90%;
+        max-width: 500px;
+        max-height: 80vh;
+        overflow-y: auto;
+        box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
+        animation: slideUp 0.3s ease;
+
+        /* Hide scrollbar for Chrome, Safari and Opera */
+        &::-webkit-scrollbar {
+          display: none;
+        }
+
+        /* Hide scrollbar for IE, Edge and Firefox */
+        -ms-overflow-style: none; /* IE and Edge */
+        scrollbar-width: none; /* Firefox */
       }
     </style>
   </head>
@@ -2466,74 +2490,74 @@
         </div>
       </section>
 
-     <!-- Privacy Notice Modal -->
-<div id="privacy-modal" class="privacy-modal" style="display: none">
-  <div class="privacy-modal-content">
-    <div class="privacy-modal-header">
-      <i class="fas fa-shield-alt"></i>
-      <h3>Your Privacy is Protected</h3>
-    </div>
+      <!-- Privacy Notice Modal -->
+      <div id="privacy-modal" class="privacy-modal" style="display: none">
+        <div class="privacy-modal-content">
+          <div class="privacy-modal-header">
+            <i class="fas fa-shield-alt"></i>
+            <h3>Your Privacy is Protected</h3>
+          </div>
 
-    <div class="privacy-modal-body">
-      <div class="privacy-point">
-        <i class="fas fa-lock"></i>
-        <div>
-          <strong>Your Photos Stay Local</strong>
-          <p>
-            All images are processed directly in your browser and never
-            uploaded to any server.
-          </p>
+          <div class="privacy-modal-body">
+            <div class="privacy-point">
+              <i class="fas fa-lock"></i>
+              <div>
+                <strong>Your Photos Stay Local</strong>
+                <p>
+                  All images are processed directly in your browser and never
+                  uploaded to any server.
+                </p>
+              </div>
+            </div>
+
+            <div class="privacy-point">
+              <i class="fas fa-desktop"></i>
+              <div>
+                <strong>Client-Side Processing</strong>
+                <p>
+                  Face detection runs entirely on your device using Google's
+                  FaceMesh technology.
+                </p>
+              </div>
+            </div>
+
+            <div class="privacy-point">
+              <i class="fas fa-eraser"></i>
+              <div>
+                <strong>Easy to Clear</strong>
+                <p>
+                  Your try-on history is stored only in your browser and can be
+                  cleared anytime.
+                </p>
+              </div>
+            </div>
+
+            <div class="privacy-point">
+              <i class="fas fa-eye-slash"></i>
+              <div>
+                <strong>No Facial Data Collection</strong>
+                <p>
+                  We don't store, share, or analyze your facial features beyond
+                  the try-on session.
+                </p>
+              </div>
+            </div>
+
+            <div class="privacy-consent">
+              <label>
+                <input type="checkbox" id="privacy-dont-show-auto" />
+                Don't show automatically on page load
+              </label>
+            </div>
+          </div>
+
+          <div class="privacy-modal-footer">
+            <button id="privacy-understand" class="privacy-btn-primary">
+              I Understand
+            </button>
+          </div>
         </div>
       </div>
-
-      <div class="privacy-point">
-        <i class="fas fa-desktop"></i>
-        <div>
-          <strong>Client-Side Processing</strong>
-          <p>
-            Face detection runs entirely on your device using Google's
-            FaceMesh technology.
-          </p>
-        </div>
-      </div>
-
-      <div class="privacy-point">
-        <i class="fas fa-eraser"></i>
-        <div>
-          <strong>Easy to Clear</strong>
-          <p>
-            Your try-on history is stored only in your browser and can be
-            cleared anytime.
-          </p>
-        </div>
-      </div>
-
-      <div class="privacy-point">
-        <i class="fas fa-eye-slash"></i>
-        <div>
-          <strong>No Facial Data Collection</strong>
-          <p>
-            We don't store, share, or analyze your facial features beyond
-            the try-on session.
-          </p>
-        </div>
-      </div>
-
-      <div class="privacy-consent">
-        <label>
-          <input type="checkbox" id="privacy-dont-show-auto" />
-          Don't show automatically on page load
-        </label>
-      </div>
-    </div>
-
-    <div class="privacy-modal-footer">
-      <button id="privacy-understand" class="privacy-btn-primary">
-        I Understand
-      </button>
-    </div>
-  </div>
-</div>
     </main>
 
     <!-- Mobile Navigation -->
@@ -2568,36 +2592,40 @@
       let currentSelectedProduct = null;
       let currentSelectedShade = null;
 
-    // Privacy Modal Functions - Always available version
-function showPrivacyNotice() {
-  const modal = document.getElementById('privacy-modal');
-  modal.style.display = 'flex';
-  
-  // Add slight blur to background for focus
-  document.querySelector('.photobooth-container').style.filter = 'blur(3px)';
-  document.querySelector('.photobooth-container').style.pointerEvents = 'none';
-}
+      // Privacy Modal Functions - Always available version
+      function showPrivacyNotice() {
+        const modal = document.getElementById("privacy-modal");
+        modal.style.display = "flex";
 
-function hidePrivacyNotice() {
-  const modal = document.getElementById('privacy-modal');
-  modal.style.display = 'none';
-  
-  // Remove blur
-  document.querySelector('.photobooth-container').style.filter = 'none';
-  document.querySelector('.photobooth-container').style.pointerEvents = 'auto';
-}
+        // Add slight blur to background for focus
+        document.querySelector(".photobooth-container").style.filter =
+          "blur(3px)";
+        document.querySelector(".photobooth-container").style.pointerEvents =
+          "none";
+      }
 
-function acceptPrivacy() {
-  const dontShowAuto = document.getElementById('privacy-dont-show-auto').checked;
-  
-  localStorage.setItem('privacyAccepted', 'true');
-  if (dontShowAuto) {
-    localStorage.setItem('privacyDontShowAuto', 'true');
-  }
-  
-  hidePrivacyNotice();
-}
+      function hidePrivacyNotice() {
+        const modal = document.getElementById("privacy-modal");
+        modal.style.display = "none";
 
+        // Remove blur
+        document.querySelector(".photobooth-container").style.filter = "none";
+        document.querySelector(".photobooth-container").style.pointerEvents =
+          "auto";
+      }
+
+      function acceptPrivacy() {
+        const dontShowAuto = document.getElementById(
+          "privacy-dont-show-auto"
+        ).checked;
+
+        localStorage.setItem("privacyAccepted", "true");
+        if (dontShowAuto) {
+          localStorage.setItem("privacyDontShowAuto", "true");
+        }
+
+        hidePrivacyNotice();
+      }
 
       document.addEventListener("DOMContentLoaded", async function () {
         // Add page protection FIRST
@@ -2639,37 +2667,37 @@ function acceptPrivacy() {
           nav.addEventListener("mouseenter", showCartTotalOnHover);
         });
 
-        const privacyBtn = document.getElementById('privacy-info-btn');
-  if (privacyBtn) {
-    privacyBtn.addEventListener('click', showPrivacyNotice);
-  }
-  
-  // Add event listener for the understand button
-  const understandBtn = document.getElementById('privacy-understand');
-  if (understandBtn) {
-    understandBtn.addEventListener('click', acceptPrivacy);
-  }
-  
-  // Close modal when clicking outside
-  const privacyModal = document.getElementById('privacy-modal');
-  if (privacyModal) {
-    privacyModal.addEventListener('click', function(e) {
-      if (e.target === this) {
-        acceptPrivacy(); // Accept privacy if they click outside
-      }
-    });
-  }
-  
-  // Optional: Show automatically on first visit (if you want)
-  const privacyAccepted = localStorage.getItem("privacyAccepted");
-  const dontShowAuto = localStorage.getItem("privacyDontShowAuto");
-  
-  if (privacyAccepted !== "true" && dontShowAuto !== "true") {
-    // Show after a short delay on first visit
-    setTimeout(() => {
-      showPrivacyNotice();
-    }, 1000);
-  }
+        const privacyBtn = document.getElementById("privacy-info-btn");
+        if (privacyBtn) {
+          privacyBtn.addEventListener("click", showPrivacyNotice);
+        }
+
+        // Add event listener for the understand button
+        const understandBtn = document.getElementById("privacy-understand");
+        if (understandBtn) {
+          understandBtn.addEventListener("click", acceptPrivacy);
+        }
+
+        // Close modal when clicking outside
+        const privacyModal = document.getElementById("privacy-modal");
+        if (privacyModal) {
+          privacyModal.addEventListener("click", function (e) {
+            if (e.target === this) {
+              acceptPrivacy(); // Accept privacy if they click outside
+            }
+          });
+        }
+
+        // Optional: Show automatically on first visit (if you want)
+        const privacyAccepted = localStorage.getItem("privacyAccepted");
+        const dontShowAuto = localStorage.getItem("privacyDontShowAuto");
+
+        if (privacyAccepted !== "true" && dontShowAuto !== "true") {
+          // Show after a short delay on first visit
+          setTimeout(() => {
+            showPrivacyNotice();
+          }, 1000);
+        }
 
         // Restore last uploaded image if exists
         const lastUploadedImage = localStorage.getItem("lastUploadedImage");
